// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Unit assignment followup component When there are only empty classes assigned should render 1`] = `
<div>
  <AssignmentFlowNavigation
    button={
      <button
        className="quill-button medium contained primary"
        onClick={[Function]}
        type="button"
      >
        Take me to my dashboard
      </button>
    }
  />
  <ScrollToTop />
  <div
    className="container"
  >
    <div
      className="unit-assignment-followup invite-students"
    >
      <h1>
        Success! You assigned 
         to 
        0 classes
        .
      </h1>
      <Card
        header="Invite students to your classes"
        imgAlt="students"
        imgSrc="undefined/images/illustrations/add-students.svg"
        onClick={[Function]}
        text="You currently have 2 classes that have no students."
      />
    </div>
  </div>
</div>
`;

exports[`Unit assignment followup component When there are students assigned on initial load should render 1`] = `
<div>
  <AssignmentFlowNavigation
    button={
      <button
        className="quill-button medium contained primary"
        onClick={[Function]}
        type="button"
      >
        Next
      </button>
    }
  />
  <ScrollToTop />
  <div
    className="container"
  >
    <div
      className="unit-assignment-followup referral"
    >
      <Component
        text=""
        visible={false}
      />
      <h1>
        Success! You assigned 
         to 
        1 class
        .
      </h1>
      <div
        className="referral-card"
      >
        <img
          alt="gift"
          src="undefined/images/illustrations/gift.svg"
        />
        <h1>
          Share Quill and earn a month of free Quill Premium for Teachers.
        </h1>
        <p>
          As a nonprofit organization that provides free activities, Quill relies on teachers to share the word.
        </p>
        <p>
          For every teacher that signs up for Quill with your referral link and completes an activity with their students, you earn a month of free Quill Premium, and they receive a one-month free trial.
        </p>
        <div
          className="share-box"
        >
          <div
            className="referral-link-container"
          >
            <Input
              autoComplete="on"
              disabled={true}
              id="referral-link"
              value="undefined/?referral_code=code"
            />
            <CopyToClipboard
              onCopy={[Function]}
              text="undefined/?referral_code=code"
            >
              <button
                className="quill-button secondary outlined small"
                type="button"
              >
                Copy link
              </button>
            </CopyToClipboard>
          </div>
          <p
            className="share-text"
          >
            More ways to share: 
          </p>
          <div
            className="share-links"
          >
            <a
              href="https://twitter.com/home?status=I'm using @quill_org to help my students become better writers and critical thinkers. Want to join me? undefined/?referral_code=code"
              rel="noopener noreferrer"
              target="_blank"
            >
              <img
                alt="twitter icon"
                src="undefined/images/icons/ui-share-twitter.svg"
              />
            </a>
            <a
              href="https://www.facebook.com/share.php?u=undefined/?referral_code=code"
              rel="noopener noreferrer"
              target="_blank"
            >
              <img
                alt="facebook icon"
                src="undefined/images/icons/ui-share-facebook.svg"
              />
            </a>
            <a
              href="https://plus.google.com/share?url=undefined/?referral_code=code"
              rel="noopener noreferrer"
              target="_blank"
            >
              <img
                alt="google plus icon"
                src="undefined/images/icons/ui-share-google.svg"
              />
            </a>
            <a
              href="mailto:mailto:?subject=Free tool to help your students become better writers&body=Hi! I've been using this free tool called Quill.org to help my students become better writers and critical thinkers, and I wanted to let you know about it. Hopefully it helps your students as much as it's helped mine! undefined/?referral_code=code"
              rel="noopener noreferrer"
              target="_blank"
            >
              <img
                alt="mail"
                src="undefined/images/icons/ui-share-email.svg"
              />
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Unit assignment followup component When there are students assigned on showNextOptions should render 1`] = `
<div>
  <AssignmentFlowNavigation
    button={
      <button
        className="quill-button medium contained primary"
        onClick={[Function]}
        type="button"
      >
        Take me to my dashboard
      </button>
    }
  />
  <ScrollToTop />
  <div
    className="container"
  >
    <div
      className="unit-assignment-followup next-options"
    >
      <h1>
        What would you like to do next?
      </h1>
      <Card
        header="See what I have assigned"
        imgAlt="Clipboard with check"
        imgSrc="undefined/images/illustrations/assigned-activities.svg"
        onClick={[Function]}
        text="View your assigned packs."
      />
      <Card
        header="Invite students"
        imgAlt="Four person icons in a circle"
        imgSrc="undefined/images/illustrations/add-students.svg"
        onClick={[Function]}
        text="Add students to your classes."
      />
      <Card
        header="Assign more activities"
        imgAlt="Stacked pages with plus sign on top one"
        imgSrc="undefined/images/illustrations/assign-activities.svg"
        onClick={[Function]}
        text="Select or build another pack."
      />
      <Card
        header="View as student"
        imgAlt="Magnifying glass around person icon"
        imgSrc="undefined/images/illustrations/view-student.svg"
        onClick={[Function]}
        text="Preview what students will see on their dashboards."
      />
    </div>
  </div>
</div>
`;
